--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
                                     </div>
                                     <div class="skill-mf">
                                         <p class="title-s">Skills</p>
-                                        <span>HTML</span> <span class="pull-right">90%</span>
+                                        <span>HTML</span> <span class="pull-right">87%</span>
                                         <div class="progress">
-                                            <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                            <div class="progress-bar" role="progressbar" style="width: 87%;" aria-valuenow="87" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                         <span>CSS3</span> <span class="pull-right">75%</span>
                                         <div class="progress">
@@ -129,13 +129,17 @@
                                         <div class="progress">
                                             <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
-                                        <span>JAVASCRIPT</span> <span class="pull-right">85%</span>
+                                        <span>JAVASCRIPT</span> <span class="pull-right">75%</span>
                                         <div class="progress">
-                                            <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                            <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                         <span>REACT JS</span> <span class="pull-right">70%</span>
                                         <div class="progress">
                                             <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                        <span>VUE JS</span> <span class="pull-right">50%</span>
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
                                     </div>
                                 </div>
