--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="container">
                     <p class="display-6 color-d">Hello!</p>
                     <h1 class="hero-title mb-4">I am Emmanuel Akinbo</h1>
-                    <p class="hero-subtitle"><span class="typed" data-typed-items="Full Stack Software Engineer, Freelancer"></span></p>
+                    <p class="hero-subtitle"><span class="typed" data-typed-items="Frontend Developer, Blockchain Enthusiast, Freelancer"></span></p>
                     <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p>
                 </div>
             </div>
@@ -86,7 +86,7 @@
                                         <div class="col-sm-6 col-md-7">
                                             <div class="about-info">
                                                 <p><span class="title-s">Name: </span> <span>Emmanuel Akinbo</span></p>
-                                                <p><span class="title-s">Profile: </span> <span>Full Stack Software Engineer</span></p>
+                                                <p><span class="title-s">Profile: </span> <span>Frontend Developer</span></p>
                                                 <p><span class="title-s">Email: </span> <span>emmanuelakinbo176@gmail.com</span></p>
                                                 <p><span class="title-s">Phone: </span> <span>+2349048229153</span></p>
                                             </div>
@@ -96,14 +96,17 @@
                                         <p class="title-s">Skills</p>
 
                                         <ul class="list-group list-group-flush">
-                                            <li class="list-group-item">HTML</li>
+                                            <li class="list-group-item">HTML5</li>
                                             <li class="list-group-item">CSS</li>
                                             <li class="list-group-item">Tailwind</li>
+                                            <li class="list-group-item">Bootstrap</li>
                                             <li class="list-group-item">JavaScript</li>
-                                            <li class="list-group-item">React</li>
-                                            <li class="list-group-item">Node</li>
-                                            <li class="list-group-item">Express</li>
-                                            <li class="list-group-item">MongoDB</li>
+                                            <li class="list-group-item">React.js</li>
+                                            <li class="list-group-item">Next.js</li>
+                                            <li class="list-group-item">Git</li>
+                                            <li class="list-group-item">Solidity</li>
+                                            <li class="list-group-item">Ethereum</li>
+                                            <li class="list-group-item">Web3.js</li>
                                         </ul>
 
                                     </div>
@@ -116,13 +119,16 @@
                                             </h5>
                                         </div>
                                         <p class="lead">
-                                            I am a Full Stack Developer with industry experience building websites and web applications. I specialize in JavaScript and have professional experience working with Node. I also have experience working with React. Take a look at my work and get in touch!
+                                            As an experienced Front-End Developer, I am passionate about using my skills to create beautiful, functional, and user-friendly web applications. With a solid foundation in HTML, CSS, and JavaScript, I am constantly expanding my knowledge of frameworks and libraries like React, and Next.js. My experience ranges from building simple landing pages to complex web applications that require integrating with multiple APIs and databases.
                                         </p>
                                         <p class="lead">
-                                            I’ve always been a great problem solver, an independent introvert, and a technophile. I started learning to code when I was a teenager, though it was always more of a hobby than a career focus till I decided to pursue a degree in Computer Science.
+                                            I have a strong eye for design, and I collaborate closely with designers, product managers, and back-end developers to ensure that the front-end of our applications meets the highest standards of usability, accessibility, and performance. I am experienced in using modern tools such as Git, and I always stay up-to-date with the latest industry trends and best practices.
                                         </p>
                                         <p class="lead">
-                                            I’m familiar with a variety of programming languages, including JavaScript, HTML, CSS, React, Node, MongoDB, and Tailwind, but I’m always adding new skills to my repertoire. I’m also eager to meet other Software Engineers in the area.
+                                            Throughout my career, I have contributed to a variety of projects in different industries. I have experience working in agile teams, and I am comfortable communicating with stakeholders at all levels of an organisation. My strengths include problem-solving, attention to detail, and a commitment to delivering high-quality work on time.
+                                        </p>
+                                        <p class="lead">
+                                            If you're looking for a Front-End Developer who is passionate about building web applications that delight users and drive business outcomes, please don't hesitate to get in touch. I am open to new opportunities and eager to take on new challenges.
                                         </p>
                                     </div>
                                 </div>
@@ -159,8 +165,7 @@
                             <div class="service-content">
                                 <h2 class="s-title">Web Development</h2>
                                 <p class="s-description text-center">
-                                    I build and maintain websites. I often work for clients who want to get their product or service on the web. This service is typically very project focused and most times incolves collaborating with a team of freelancers that help to coordinate the client's
-                                    needs into the end product.
+                                    As a frontend developer, I specialize in creating visually appealing and interactive websites or web applications. Using HTML, CSS, and JavaScript, I build user interfaces that enhance user engagement and ensure a seamless user experience.
                                 </p>
                             </div>
                         </div>
@@ -171,9 +176,9 @@
                                 <span class="ico-circle"><i class="bi bi-card-checklist"></i></span>
                             </div>
                             <div class="service-content">
-                                <h2 class="s-title">Web Design</h2>
+                                <h2 class="s-title">User Experience Design</h2>
                                 <p class="s-description text-center">
-                                    I plan, create and code internet sites and web pages, many of which combine text with sounds, pictures, graphics and video clips. I work on both brand new websites and existing sites.
+                                    My expertise includes contributing to the design process, ensuring that the interface is intuitive and user-friendly. I work closely with UX and UI designers to implement design mockups into functional frontend components that prioritize usability.
                                 </p>
                             </div>
                         </div>
@@ -184,9 +189,9 @@
                                 <span class="ico-circle"><i class="bi bi-binoculars"></i></span>
                             </div>
                             <div class="service-content">
-                                <h2 class="s-title">Responsive Design</h2>
+                                <h2 class="s-title">Performance Optimization</h2>
                                 <p class="s-description text-center">
-                                    I plan, create and code internet sites and web pages that dynamically change depending on the screen size and orientation of the device being used to view it. I work on both brand new websites and existing sites.
+                                    I focus on optimizing website performance, reducing loading times, and file sizes. Techniques like lazy loading and caching improve page load speed for better user satisfaction.
                                 </p>
                             </div>
                         </div>
@@ -701,8 +706,8 @@
                                             <ul>
                                                 <li><a href="https://github.com/akinbo-emmanuel" target="_blank"><span class="ico-circle"><i class="bi bi-github"></i></span></a></li>
                                                 <li><a href="https://instagram.com/_emmanuelakinbo" target="_blank"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
-                                                <li><a href="https://twitter.com/EmmanuelAkinb13" target="_blank"><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
-                                                <li><a href="https://linkedin.com/emmanuel-akinbo" target="_blank"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
+                                                <li><a href="https://twitter.com/_emmanuelakinbo" target="_blank"><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
+                                                <li><a href="https://linkedin.com/in/emmanuel-akinbo" target="_blank"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
                                             </ul>
                                         </div>
                                     </div>
