--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 </div>
             </div>
         </div>
-    </div>
+        </div>
         <!-- End Counter Section -->
 
 
@@ -277,6 +277,84 @@
                     </div>
                 </div>
                 <div class="row">
+                    <div class="col-md-4">
+                        <div class="work-box">
+                            <a href="https://res.cloudinary.com/dypvfvu6i/image/upload/v1706012364/Portfolio/country_amimuk.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                                <div class="work-img">
+                                    <img src="https://res.cloudinary.com/dypvfvu6i/image/upload/v1706012364/Portfolio/country_amimuk.png" alt="" class="img-fluid">
+                                </div>
+                            </a>
+                            <div class="work-content">
+                                <div class="row">
+                                    <div class="col-sm-8">
+                                        <h2 class="w-title">Movie Box</h2>
+                                        <div class="w-more">
+                                            <span class="w-ctegory">Web Development</span> / <span class="w-date">Sept 14, 2023</span>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <div class="w-like">
+                                            <a href="https://eacountry.vercel.app/" target="_blank"> <span class="bi bi-plus-circle"></span></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- COUNTRY LIST AND DETAILS -->
+                    <div class="col-md-4">
+                        <div class="work-box">
+                            <a href="https://res.cloudinary.com/dypvfvu6i/image/upload/v1706012364/Portfolio/country_amimuk.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                                <div class="work-img">
+                                    <img src="https://res.cloudinary.com/dypvfvu6i/image/upload/v1706012364/Portfolio/country_amimuk.png" alt="" class="img-fluid">
+                                </div>
+                            </a>
+                            <div class="work-content">
+                                <div class="row">
+                                    <div class="col-sm-8">
+                                        <h2 class="w-title">Country List and Details</h2>
+                                        <div class="w-more">
+                                            <span class="w-ctegory">Web Development</span> / <span class="w-date">Sept 10, 2023</span>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <div class="w-like">
+                                            <a href="https://eacountry.vercel.app/" target="_blank"> <span class="bi bi-plus-circle"></span></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- PROFILE CARD -->
+                    <div class="col-md-4">
+                        <div class="work-box">
+                            <a href="https://res.cloudinary.com/dypvfvu6i/image/upload/v1706012680/Portfolio/8018e759-7968-4b34-94ef-d23b55c191e7_s1vw2m.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                                <div class="work-img">
+                                    <img src="https://res.cloudinary.com/dypvfvu6i/image/upload/v1706012680/Portfolio/8018e759-7968-4b34-94ef-d23b55c191e7_s1vw2m.png" alt="" class="img-fluid">
+                                </div>
+                            </a>
+                            <div class="work-content">
+                                <div class="row">
+                                    <div class="col-sm-8">
+                                        <h2 class="w-title">Profile Card</h2>
+                                        <div class="w-more">
+                                            <span class="w-ctegory">Web Development</span> / <span class="w-date">Sept 8, 2023</span>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <div class="w-like">
+                                            <a href="https://eaprofile.vercel.app/" target="_blank"> <span class="bi bi-plus-circle"></span></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- GOOGLE CLONE -->
                     <div class="col-md-4">
                         <div class="work-box">
                             <a href="assets/img/work-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
@@ -301,6 +379,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="col-md-4">
                         <div class="work-box">
                             <a href="assets/img/work-6.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
