--- a/index.html
+++ b/index.html
@@ -277,6 +277,33 @@
                     </div>
                 </div>
                 <div class="row">
+                    <!-- WALMART CLONE -->
+                    <div class="col-md-4">
+                        <div class="work-box">
+                            <a href="http://tinyurl.com/y84f43rd" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                                <div class="work-img">
+                                    <img src="http://tinyurl.com/y84f43rd" alt="" class="img-fluid">
+                                </div>
+                            </a>
+                            <div class="work-content">
+                                <div class="row">
+                                    <div class="col-sm-8">
+                                        <h2 class="w-title">Walmart Clone</h2>
+                                        <div class="w-more">
+                                            <span class="w-ctegory">Web Development</span> / <span class="w-date">Feb 21, 2023</span>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <div class="w-like">
+                                            <a href="https://walmartclone.vercel.app/" target="_blank"> <span class="bi bi-plus-circle"></span></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- MOVIEBOX -->
                     <div class="col-md-4">
                         <div class="work-box">
                             <a href="https://res.cloudinary.com/dypvfvu6i/image/upload/v1706012364/Portfolio/country_amimuk.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
@@ -294,7 +321,7 @@
                                     </div>
                                     <div class="col-sm-4">
                                         <div class="w-like">
-                                            <a href="https://eacountry.vercel.app/" target="_blank"> <span class="bi bi-plus-circle"></span></a>
+                                            <a href="https://eamoviebox.vercel.app/" target="_blank"> <span class="bi bi-plus-circle"></span></a>
                                         </div>
                                     </div>
                                 </div>
