--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                     <!-- WALMART CLONE -->
                     <div class="col-md-4">
                         <div class="work-box">
-                            <a href="http://tinyurl.com/y84f43rd" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                            <a href="https://res.cloudinary.com/dypvfvu6i/image/upload/v1708949862/Portfolio/walmart_pu6arj.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                                 <div class="work-img">
                                     <img src="http://tinyurl.com/y84f43rd" alt="" class="img-fluid">
                                 </div>
@@ -306,9 +306,9 @@
                     <!-- MOVIEBOX -->
                     <div class="col-md-4">
                         <div class="work-box">
-                            <a href="https://res.cloudinary.com/dypvfvu6i/image/upload/v1706012364/Portfolio/country_amimuk.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                            <a href="https://res.cloudinary.com/dypvfvu6i/image/upload/v1708950852/Portfolio/movie-box_t6pzt0.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                                 <div class="work-img">
-                                    <img src="https://res.cloudinary.com/dypvfvu6i/image/upload/v1706012364/Portfolio/country_amimuk.png" alt="" class="img-fluid">
+                                    <img src="http://tinyurl.com/4f4artn6" alt="" class="img-fluid">
                                 </div>
                             </a>
                             <div class="work-content">
