Removed one project

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                     <!-- GOOGLE CLONE -->
                     <div class="col-md-4">
                         <div class="work-box">
-                            <a href="assets/img/work-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                            <a href="assets/img/googleclone.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                                 <div class="work-img">
                                     <img src="assets/img/googleclone.png" alt="" class="img-fluid">
                                 </div>
@@ -383,7 +383,7 @@
 
                     <div class="col-md-4">
                         <div class="work-box">
-                            <a href="assets/img/work-6.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                            <a href="assets/img/pond5clone.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                                 <div class="work-img">
                                     <img src="assets/img/pond5clone.png" alt="" class="img-fluid">
                                 </div>
@@ -405,9 +405,10 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="col-md-4">
                         <div class="work-box">
-                            <a href="assets/img/work-6.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                            <a href="assets/img/random.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                                 <div class="work-img">
                                     <img src="assets/img/random.png" alt="" class="img-fluid">
                                 </div>
@@ -429,9 +430,10 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="col-md-4">
                         <div class="work-box">
-                            <a href="assets/img/work-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                            <a href="assets/img/residency.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                                 <div class="work-img">
                                     <img src="assets/img/residency.png" alt="" class="img-fluid">
                                 </div>
@@ -453,9 +455,10 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="col-md-4">
                         <div class="work-box">
-                            <a href="assets/img/work-6.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                            <a href="assets/img/quiz.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                                 <div class="work-img">
                                     <img src="assets/img/quiz.png" alt="" class="img-fluid">
                                 </div>
@@ -477,30 +480,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="work-box">
-                            <a href="assets/img/work-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
-                                <div class="work-img">
-                                    <img src="assets/img/login.png" alt="" class="img-fluid">
-                                </div>
-                            </a>
-                            <div class="work-content">
-                                <div class="row">
-                                    <div class="col-sm-8">
-                                        <h2 class="w-title">Login-SignUp Form</h2>
-                                        <div class="w-more">
-                                            <span class="w-ctegory">Web Development</span> / <span class="w-date">Feb. 2021</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-4">
-                                        <div class="w-like">
-                                            <a href="http://login-signupform.netlify.app/" target="_blank"> <span class="bi bi-plus-circle"></span></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    
                     <div class="col-md-4">
                         <div class="work-box">
                             <a href="assets/img/work-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
